spacing fix

--- a/docs/_sass/_elements.scss
+++ b/docs/_sass/_elements.scss
@@ -162,7 +162,7 @@
 
   ul.cta-links {
     padding: 1em;
-    margin: 2em 0 0 1em;
+    margin: 1em 0 0 1em;
     text-align: left;
 
     li {
